fix: prevent giphy in preview from overflowing in virtualized message list (#225)

--- a/src/v1/Card.scss
+++ b/src/v1/Card.scss
@@ -1,3 +1,12 @@
+.str-chat__message-attachment-card:not(.str-chat__message-attachment-card--giphy) {
+  .str-chat__message-attachment-card--header {
+    img {
+      width: inherit;
+      height: inherit;
+    }
+  }
+}
+
 .str-chat__message-attachment-card {
   position: relative;
   background: var(--white);
@@ -12,8 +21,6 @@
     height: 175px;
 
     img {
-      width: inherit;
-      height: inherit;
       object-fit: cover;
     }
   }
@@ -65,6 +72,24 @@
 
   &--giphy &--header {
     height: unset;
+  }
+}
+
+.giphy-preview-message {
+  .str-chat__message-attachment-card--giphy {
+    display: flex;
+    flex-direction: column;
+
+    .str-chat__message-attachment-card--header {
+      display: flex;
+      justify-content: center;
+      background-color: white;
+      
+      .str-chat__message-attachment--img {
+        width: unset;
+      }
+    }
+
   }
 }
 
